VT-849: laskentakaavaviiteobjekti luodaan tallennetun osakaavan perusteella

--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
@@ -431,7 +431,7 @@
     <div ng-show="toggle">
 
         <button class="btn btn-default btn-sm" ng-click="toggle = !toggle"><i class="fa fa-arrow-left"></i> Palaa funktioasetuksiin</button>
-        <button class="btn btn-primary btn-sm" ng-disabled="!newKaavaNimi" ng-click="saveAsNewLaskentakaava(funktioasetukset.parentFunktiokutsu, funktioSelection, newKaavaNimi, newKaavaKuvaus)"><i class="fa fa-floppy-o"></i> Tallenna uutena laskentakaavana</button>
+        <button class="btn btn-primary btn-sm" ng-disabled="!newKaavaNimi" ng-click="saveAsNewLaskentakaava(funktioasetukset.parentFunktiokutsu, funktioSelection, newKaavaNimi, newKaavaKuvaus, sulje)"><i class="fa fa-floppy-o"></i> Tallenna uutena laskentakaavana</button>
         <button class="btn btn-default btn-sm" ng-click="sulje()">Sulje</button>
     </div>
 </div>
