--- a/src/main/webapp/app/valintakoe/valintakoelomake.html
+++ b/src/main/webapp/app/valintakoe/valintakoelomake.html
@@ -41,7 +41,7 @@
             </div>
         </div>
 
-
+        <!--
         <div class="form-row" ng-model="model.laskentakaavat">
 
             <div class="form-row-label">Laskentakaava</div>
@@ -58,7 +58,7 @@
                         <input type="radio" name="laskentakaava" value="{{data.id}}"
                                ng-model="model.valintakoe.laskentakaavaId"/>
 
-                        <span ng-bind="data.nimi"></span>(<span ng-bind="data.id"></span>)
+                        <span ng-bind="data.nimi"></span>
                     </label>
                 </div>
 
@@ -66,7 +66,36 @@
             <div class="clear"></div>
         </div>
 
-        <div class="clear"></div>
+-->
+
+        <div class="form-row">
+
+            <div class="form-row-label">Laskentakaava</div>
+            <div class="form-row-content">&nbsp;</div>
+            <div class="clear"></div>
+            <div ng-repeat="group in model.laskentakaavaModel.laskentakaavat" class="field-container-radio">
+                <div class="form-row-label">{{group.name}}</div>
+                <div class="form-row-content">
+                    <!--<span >{{model.laskentakaavat}}</span>-->
+
+                    <div ng-repeat="data in group.result" class="field-container-radio">
+                        <label>
+                            <input type="radio" name="laskentakaava" value="{{data.id}}"
+                                   ng-model="model.valintakoe.laskentakaavaId"
+                                   ng-required="!model.valintakoe.laskentakaavaId"/>
+
+                            <span ng-bind="data.nimi"></span>
+                        </label>
+                    </div>
+                </div>
+
+                <div class="clear"></div>
+            </div>
+
+        </div>
+
+
+
         <button class="btn btn-sm btn-default" ng-click="cancel()"><i class="fa fa-arrow-left"></i>
             Takaisin
         </button>
