--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/laskentakaavaviiteAsetuksetModal.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/laskentakaavaviiteAsetuksetModal.html
@@ -27,7 +27,7 @@
     </div>
 </div>
 <div class="modal-footer">
-    <span ng-if="alikaavaValues.hasParentAlikaava !== true" class="btn btn-sm btn-default" ng-click="removeLaskentakaavaviite()"><i class="fa fa-trash-o"></i> Poista laskentakaavaviite</span>
+    <span ng-if="alikaavaValues.hasParentAlikaava !== true" class="btn btn-sm btn-default" ng-click="removeLaskentakaavaviite(); sulje()"><i class="fa fa-trash-o"></i> Poista laskentakaavaviite</span>
     <a class="btn btn-default btn-sm" ng-click="sulje();"
        role="button">Sulje</a>
 </div>
