VT-848: Käyttäjälle näytetään virheilmoitus, jos laskentakaavan tallentaminen pysähtyy palvelimen päässä

--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -55,6 +55,7 @@
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/utilities/funktioServices.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/utilities/kaavaValidationService.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/utilities/funktioNimiService.js"></script>
+    <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/utilities/kaavaVirheService.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/laskentakaavadirectives.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/utilities/funktioFactory.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/utilities/templateService.js"></script>
