lokalisointimoduuli vaihdettu valintaperusteisiin

--- a/src/main/webapp/app/hakijaryhma/hakijaryhma.html
+++ b/src/main/webapp/app/hakijaryhma/hakijaryhma.html
@@ -89,7 +89,7 @@
                         <td>
                             <span ng-class="{true:'', false:'line-through'}[jono.valintatapajono.aktiivinen]">{{jono.valintatapajono.nimi}}</span>
                         </td>
-                        <td>{{'valintaperusteet.periytyy.' + jono.valintatapajono.inheritance | i18n}}</td>
+                        <td>{{'valintaperusteet.periytyy.' + jono.valintatapajono.inheritance | translate}}</td>
                     </tr>
                     </tbody>
                 </table>
