--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -12,10 +12,10 @@
     <script type="text/javascript" src="../common/jslib/angular-resource.min.js"></script>
     <script type="text/javascript" src="../common/jslib/angular-route.min.js"></script>
     <script type="text/javascript" src="../common/jslib/angular-animate.min.js"></script>
+    <script type="text/javascript" src="../common/jslib/angular-translate.js"></script>
     <script type="text/javascript" src="../common/jslib/static/jquery.nestable.js"></script>
     <script type="text/javascript" src="../common/jslib/static/jquery.mjs.nestedSortable.js"></script>
     <script type="text/javascript" src="../common/jslib/ui-bootstrap-tpls.min.js"></script>
-    <script type="text/javascript" src="../common/jslib/jquery.i18n.properties.js"></script>
 
     <!--conf -->
     <script type="text/javascript"  src="../configuration/configuration.js"></script>
@@ -43,7 +43,7 @@
     <script type="text/javascript" src="../common/js/filters.js"></script>
     <script type="text/javascript" src="../common/js/auth.js"></script>
     <script type="text/javascript" src="../common/js/ng-breadcrumbs.js"></script>
-    <script type="text/javascript" src="../common/js/localization.js"></script>
+    <script type="text/javascript" src="../common/js/localizations.js"></script>
 
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditor.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavaresources.js"></script>
