--- a/src/main/webapp/app/valinnanvaihe/valinnanvaihelomake.html
+++ b/src/main/webapp/app/valinnanvaihe/valinnanvaihelomake.html
@@ -58,7 +58,7 @@
                             <a ng-class="{true:'', false:'line-through'}[jono.aktiivinen]"
                                ng-click="modifyJono(jono.oid)">{{jono.nimi}}</a>
                         </td>
-                        <td>{{'valintaperusteet.periytyy.' + jono.inheritance | i18n}}</td>
+                        <td>{{'valintaperusteet.periytyy.' + jono.inheritance | translate}}</td>
                         <td class="align-center">
                         <i auth="crud" ng-show="!jono.inheritance" class="fa fa-trash-o"
                               ng-click="model.remove(jono)"></i>
