--- a/src/main/webapp/app/valinnanvaihe/valintakoevalinnanvaihelomake.html
+++ b/src/main/webapp/app/valinnanvaihe/valintakoevalinnanvaihelomake.html
@@ -1,4 +1,4 @@
-<h1>{{'koekutsuvaihe.header' | i18n}}</h1>
+<h1>{{'koekutsuvaihe.header' | translate}}</h1>
 
 <div class="tabs">
     <a href="#/etusivu" class="tab current"><span>Valintaryhmät ja hakukohteet</span></a>
