--- a/src/main/webapp/app/valintatapajono/valintatapajono.html
+++ b/src/main/webapp/app/valintatapajono/valintatapajono.html
@@ -1,4 +1,4 @@
-﻿<h1>{{'jononmuokkaus.header' | i18n}}</h1>
+﻿<h1>{{'jononmuokkaus.header' | translate}}</h1>
 
 <div class="tabs">
     <a href="#/etusivu" class="tab current"><span>Valintaryhmät ja hakukohteet</span></a>
@@ -40,7 +40,7 @@
     <div class="clear"></div>
 
     <label class="form-row-label" for="siirretaanSijoitteluun">{{'jononmuokkaus.siirretaan.sijoitteluun' |
-        i18n}}</label>
+        translate}}</label>
 
     <div class="form-row-content">
         <div class="field-container-checkbox">
