--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -59,6 +59,7 @@
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/laskentakaavadirectives.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/utilities/funktioFactory.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/utilities/templateService.js"></script>
+    <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/utilities/guid.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/funktioasetukset/funktioasetusController.js"></script>
     <script type="text/javascript" src="laskentakaavat/listaus/hakukohdelaskentakaavalista.js"></script>
 
