--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
@@ -57,16 +57,19 @@
 
             <div class="form-group">
                 <label class="col-sm-3 control-label">Tunniste</label>
-
                 <div class="col-sm-9" ng-if="valintaperusteviite.tyyppi != 'ARVOJOUKKO'">
                     <input ng-disabled="alikaavaValues.isAlikaava" type="text" ng-model="valintaperuste.tunniste"
                            required="required"/>
+
+                    <span ng-if="valintaperuste.lahde === 'SYOTETTAVA_ARVO'" ng-click="generateSyoteId(valintaperuste)" class="btn btn-sm btn-default">Generoi tunniste</span>
                 </div>
+
                 <div class="col-sm-9" ng-if="valintaperusteviite.tyyppi == 'ARVOJOUKKO'">
                     <select ng-disabled="alikaavaValues.isAlikaava" ng-model="valintaperuste.tunniste"
                             ng-options="key as value for (key, value) in valintaperusteviite.arvojoukko"></select>
                 </div>
             </div>
+
         </form>
     </div>
 </script>
@@ -264,7 +267,6 @@
                          class="valintaperusteviite-form"
                          ng-init="valintaperuste = getValintaperuste(funktioSelection.lapsi.valintaperusteviitteet, $index)"
                          ng-include="'valintaperuste-default-template'">
-
                     </div>
                 </div>
             </div>
@@ -289,7 +291,7 @@
 
                     <div class="form-item">
                         <label ng-if="funktioSelection.lapsi.arvokonvertteriparametrit.length > 0 || funktioSelection.lapsi.arvovalikonvertteriparametrit.length > 0"
-                               class="form-item-label" for="" style="width:100px;">Konversiomäärittelyt</label>
+                               class="form-item-label" style="width:100px;">Konversiomäärittelyt</label>
 
                         <div class="form-item-content"
                              ng-if="funktioSelection.lapsi.arvokonvertteriparametrit.length > 0"
