--- a/src/main/webapp/app/valintaryhmalistaus/valintaryhmatlistaus.html
+++ b/src/main/webapp/app/valintaryhmalistaus/valintaryhmatlistaus.html
@@ -1,6 +1,5 @@
 <!-- Node template -->
 <script type="text/ng-template" id="valintaryhma_node.html">
-
     <span class="node">
             <i class="fa fa-users"  ng-class="{ kiinni: domain.isCollapsed(data), eilapsia: domain.isFile(data), auki: domain.isExpanded(data)}" ng-click="expandNode(data)"></i>
         <a href="#/valintaryhma/{{data.oid}}">{{data.nimi}}
@@ -39,8 +38,8 @@
 
     <div class="search">
         <div class="margin-top-1">
-            <a auth="crud" href="#/valintaryhma/" class="margin-right-1 btn btn-sm btn-default"> <i class="fa fa-plus"></i> {{'valintaryhmatlistaus.add.valintaryhma' | translate}}</a>
-            <a auth="crud" href="#/hakukohde/" class="margin-right-1 btn btn-sm btn-default"> <i class="fa fa-plus"></i> {{'valintaryhmatlistaus.add.hakukohde' | translate}}</a>
+            <a auth="crud" href="#/valintaryhma/" class="margin-right-1 btn btn-sm btn-default"> <i class="fa fa-plus"></i> {{'valintaryhmalistaus.add.valintaryhma' | translate}}</a>
+            <a auth="crud" href="#/hakukohde/" class="margin-right-1 btn btn-sm btn-default"> <i class="fa fa-plus"></i> {{'valintaryhmalistaus.add.hakukohde' | translate}}</a>
             <a class="btn btn-sm btn-default" ng-click="domain.expandTree()"> <i class="fa fa-expand"></i> Avaa puu</a>
         </div>
 
