Valintaryhmän siirto nappula näkymään UI:ssa myös niille hakukohteille, jotka eivät ole missään valintaryhmässä.

--- a/src/main/webapp/app/hakukohde/hakukohdelomake.html
+++ b/src/main/webapp/app/hakukohde/hakukohdelomake.html
@@ -81,7 +81,7 @@
 
 
 
-        <div class="form-group" ng-show="model.parentValintaryhma.nimi">
+        <div class="form-group">
             <label class="col-md-2 control-label">Valintaryhmä:</label>
 
             <div class="control-content">
